salesforce_package/force-app/main/default/objects/Investigation_Case__c/Investigation_Case__c.object-meta.xml
<CustomObject>
    <label>Investigation Case</label>
    <pluralLabel>Investigation Cases</pluralLabel>
    <nameField>
        <label>Investigation Case Number</label>
        <displayFormat>INV-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>NAME</columns>
        <columns>Work_Ref__c</columns>
        <columns>State__c</columns>
        <columns>Confidence_Band__c</columns>
        <columns>Exposure__c</columns>
        <columns>Investigation_Status__c</columns>
        <columns>Target_Review_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>Open_High_Priority</fullName>
        <columns>NAME</columns>
        <columns>Work_Ref__c</columns>
        <columns>State__c</columns>
        <columns>Implementing_Agency__c</columns>
        <columns>Exposure__c</columns>
        <columns>Audit_ROI__c</columns>
        <columns>Escalation_Tier__c</columns>
        <columns>Investigation_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Confidence_Band__c</field>
            <operation>equals</operation>
            <value>HIGH</value>
        </filters>
        <filters>
            <field>Investigation_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Open HIGH Priority</label>
    </listViews>
    <listViews>
        <fullName>My_Cases</fullName>
        <columns>NAME</columns>
        <columns>Work_Ref__c</columns>
        <columns>State__c</columns>
        <columns>Investigation_Status__c</columns>
        <columns>Target_Review_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
</CustomObject>