salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Audit_ROI__c.field-meta.xml
<CustomField>
    <fullName>Audit_ROI__c</fullName>
    <label>Audit ROI</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>