salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Compliance_Findings__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Findings__c</fullName>
    <label>Compliance Findings</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>