salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Constituency__c.field-meta.xml
<CustomField>
    <fullName>Constituency__c</fullName>
    <label>Constituency</label>
    <type>Text</type>
    <length>120</length>
</CustomField>