salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Early_Warning_Level__c.field-meta.xml
<CustomField>
    <fullName>Early_Warning_Level__c</fullName>
    <label>Early Warning Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>CRITICAL</fullName>
                </value>
                <value>
                    <fullName>HIGH</fullName>
                </value>
                <value>
                    <fullName>MEDIUM</fullName>
                </value>
                <value>
                    <fullName>LOW</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>