salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Early_Warning_Reason__c.field-meta.xml
<CustomField>
    <fullName>Early_Warning_Reason__c</fullName>
    <label>Early Warning Reason</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>