salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Escalation_Tier__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Tier__c</fullName>
    <label>Escalation Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>District Monitoring</fullName>
                </value>
                <value>
                    <fullName>State Nodal</fullName>
                </value>
                <value>
                    <fullName>Ministry Review</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>