salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Exposure__c.field-meta.xml
<CustomField>
    <fullName>Exposure__c</fullName>
    <label>Exposure at Risk</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>