salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Implementing_Agency__c.field-meta.xml
<CustomField>
    <fullName>Implementing_Agency__c</fullName>
    <label>Implementing Agency</label>
    <type>Text</type>
    <length>255</length>
</CustomField>