salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Investigation_Status__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Status__c</fullName>
    <label>Investigation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>