salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/MP_Name__c.field-meta.xml
<CustomField>
    <fullName>MP_Name__c</fullName>
    <label>MP Name</label>
    <type>Text</type>
    <length>120</length>
</CustomField>