salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Not_A_Fraud_Finding__c.field-meta.xml
<CustomField>
    <fullName>Not_A_Fraud_Finding__c</fullName>
    <label>Not A Fraud Finding</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>