salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Officer_Finding__c.field-meta.xml
<CustomField>
    <fullName>Officer_Finding__c</fullName>
    <label>Officer Finding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Verified Complete</fullName>
                </value>
                <value>
                    <fullName>Verified In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Not Found</fullName>
                </value>
                <value>
                    <fullName>Record Mismatch</fullName>
                </value>
                <value>
                    <fullName>No Access</fullName>
                </value>
                <value>
                    <fullName>False Positive</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>