salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>4</scale>
</CustomField>