salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Recommendation_Date__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Date__c</fullName>
    <label>Recommendation Date</label>
    <type>Date</type>
</CustomField>