salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Recommended_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Amount__c</fullName>
    <label>Recommended Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>