salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Recommended_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Next_Step__c</fullName>
    <label>Recommended Next Step</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>