salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Signal_Families__c.field-meta.xml
<CustomField>
    <fullName>Signal_Families__c</fullName>
    <label>Signal Families</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>