salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Suggested_Actions__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Actions__c</fullName>
    <label>Suggested Actions</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>