salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Target_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Review_Date__c</fullName>
    <label>Target Review Date</label>
    <type>Date</type>
</CustomField>