salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Work_Ref__c.field-meta.xml
<CustomField>
    <fullName>Work_Ref__c</fullName>
    <label>Work Reference</label>
    <type>Text</type>
    <required>true</required>
    <externalId>true</externalId>
    <unique>true</unique>
    <length>40</length>
</CustomField>