salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Work_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Status__c</fullName>
    <label>Work Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>