salesforce_package/force-app/main/default/objects/Investigation_Case__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <label>Work Type</label>
    <type>Text</type>
    <length>255</length>
</CustomField>